@@ -2,6 +2,7 @@ version 0.6.2 - xx-Dec-2008
  . Actions: Accelerate & Speed can ratios can be modified at runtime (issue #127)
  . CocosNode: added absolutePosition (issue #9 & issue #122)
  . CocosNode: tag is propagated when adding children (issue #118)
+ . CocosNode: change change z-order at runtime (issue #59)
  . Demos: shows how to set multiple Touches and other options (issue #116)
  . Demos: fixed type (issue #111)
  . Director: Touches work fast again (issue #126)
